--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,16 @@
         published: ${{ steps.release.outputs.published }}
         release-git-tag: ${{ steps.release.outputs.release-git-tag }}
       steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          token: ${{ steps.app-token.outputs.token }}
       - name: Release
         id: release
         uses: ahmadnassri/action-semantic-release@v2.2.8
@@ -36,7 +44,16 @@
           ostype: [linux-gnu, linux-musl]
       runs-on: ubuntu-latest
       steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          token: ${{ steps.app-token.outputs.token }}
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
       - name: Set environment variables
@@ -59,7 +76,7 @@
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/gh-org-template/template-1-github-release
+          images: ghcr.io/gh-org-template/kong-runtime
           sep-tags: ' '
           flavor: |
             suffix=-${{ matrix.architecture }}-${{ matrix.ostype }}
@@ -73,7 +90,7 @@
         if: ${{ needs.release.outputs.published == 'true' }}
         run: |
           for tag in ${{ steps.meta.outputs.tags }}; do \
-            docker tag ghcr.io/template-1-github-release:build-$ARCHITECTURE-$OSTYPE $tag && \
+            docker tag ghcr.io/kong-runtime:build-$ARCHITECTURE-$OSTYPE $tag && \
             docker push $tag; \
           done
       - name: Archive the package
@@ -105,12 +122,12 @@
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Combine per architecture images into a single multi-arch manifest
         run: |
-          docker pull ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-aarch64-${{ matrix.ostype }}
-          docker pull ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-x86_64-${{ matrix.ostype }}
-          docker manifest create ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-${{ matrix.ostype }} \
-            ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-aarch64-${{ matrix.ostype }} \
-            ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-x86_64-${{ matrix.ostype }}
-          docker manifest push ghcr.io/gh-org-template/template-1-github-release:${{ needs.release.outputs.release-git-tag }}-${{ matrix.ostype }}
+          docker pull ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-aarch64-${{ matrix.ostype }}
+          docker pull ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-x86_64-${{ matrix.ostype }}
+          docker manifest create ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-${{ matrix.ostype }} \
+            ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-aarch64-${{ matrix.ostype }} \
+            ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-x86_64-${{ matrix.ostype }}
+          docker manifest push ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-${{ matrix.ostype }}
 
     done:
       needs: [artifacts]
