fix(ci): make sure the Done ci task is honest

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,9 +130,17 @@
           docker manifest push ghcr.io/gh-org-template/kong-runtime:${{ needs.release.outputs.release-git-tag }}-${{ matrix.ostype }}
 
     done:
-      needs: [artifacts]
+      needs: [release, artifacts, multi-arch]
       name: Done
-      if: needs.artifacts.result == 'success'
+      if: always()
       runs-on: ubuntu-latest
       steps:
+      - name: Check for Failed Jobs
+        run: |
+          if [[ "${{ needs.release.result }}" == "failure" || "${{ needs.artifacts.result }}" == "failure" || "${{ needs.multi-arch.result }}" == "failure" ]]; then
+            echo "One or more jobs failed. Marking release as failed."
+            exit 1
+          else
+            echo "All jobs succeeded or were skipped. Marking release as successful."
+          fi
       - run: echo 'done'
