fix(updatecli): add a condition check that verifies the docker image exists

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -20,6 +20,14 @@ sources:
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
 
+conditions:
+  ghcr:
+    name: Make sure the image has been published
+    sourceid: kongOpenSSLLatestVersion
+    kind: dockerimage
+    spec:
+      image: "ghcr.io/gh-org-template/kong-openssl"
+
 targets:
   updateBaseDockerVersion:
     name: "Update base image"
