--- a/.github/workflows/update-cli.yaml
+++ b/.github/workflows/update-cli.yaml
@@ -35,15 +35,15 @@ jobs:
           curl -LO https://github.com/updatecli/updatecli/releases/latest/download/updatecli_Linux_x86_64.tar.gz
           tar -xzvf updatecli_Linux_x86_64.tar.gz -C /usr/local/bin
 
-      - name: Run Updatecli
+      - name: Run Updatecli to update Dockerfile
         env:
           UPDATECLI_GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           UPDATECLI_GITHUB_ACTOR: ${{ github.actor }}
         run: |
-          updatecli diff --config manifest.atc-router.yaml
-          updatecli apply --config manifest.atc-router.yaml
-          updatecli diff --config manifest.openssl.yaml
-          updatecli apply --config manifest.openssl.yaml
+          for file in manifest.*.yaml; do
+            updatecli diff --config "$file"
+            updatecli apply --config "$file"
+          done
           rm -rf updatecli*.tar.gz
 
       - name: Create Pull Request
