fix(ci): try and adjust updatecli so it'll grab all manifests

--- a/.github/workflows/update-cli.yaml
+++ b/.github/workflows/update-cli.yaml
@@ -38,8 +38,10 @@ jobs:
           UPDATECLI_GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           UPDATECLI_GITHUB_ACTOR: ${{ github.actor }}
         run: |
-          updatecli diff --config manifest.yaml
-          updatecli apply --config manifest.yaml
+          for file in manifest.*.yaml; do
+            updatecli diff --config "$file"
+            updatecli apply --config "$file"
+          done
           rm -rf updatecli*.tar.gz
 
       - name: Create Pull Request
