--- a/.github/workflows/update-cli.yaml
+++ b/.github/workflows/update-cli.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - main
+    - fix/update-cli
   workflow_dispatch:  # Allows manual triggering of the workflow
   schedule:
     - cron: '0 0 * * *'
