--- a/.github/workflows/update-cli.yaml
+++ b/.github/workflows/update-cli.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
     - main
+    - fix/updatecli
   workflow_dispatch:
   repository_dispatch:
     types: [update-required]
