feat(updatecli): additional updatecli to keep the requirements sync'd

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
+# All of these values are managed by updatecli. Do not edit manually
+
 OPENRESTY_VERSION=1.21.4.1
 LUAROCKS_VERSION=3.9.2
 PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.1.1
+KONG_VERSION=3.2.1
+KONG_SHA=c33859a83ea402e0b86460f8ea89f3997cc76b28
