--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,24 @@
           owner: ${{ github.repository_owner }}
       - uses: actions/checkout@v4
         with:
+          fetch-depth: 5
           submodules: recursive
           token: ${{ steps.app-token.outputs.token }}
+      - name: Determine Dry Run
+        id: check
+        run: |
+          if git diff --name-only HEAD~1 HEAD | grep -E '^(\.env|patches|Dockerfile/)'; then
+            echo "Changes detected in .env or ./patches/ or Dockerfile, proceeding with full release."
+            echo "dry_run=false" >> $GITHUB_ENV
+          else
+            echo "No changes detected in .env or ./patches/ or Dockerfile, switching to dry run."
+            echo "dry_run=true" >> $GITHUB_ENV
+          fi
       - name: Release
         id: release
         uses: ahmadnassri/action-semantic-release@v2.2.8
+        with:
+          dry: ${{ env.dry_run }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
