--- a/.github/workflows/update-cli-prs.yaml
+++ b/.github/workflows/update-cli-prs.yaml
@@ -48,8 +48,12 @@ jobs:
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
-          git commit -m "chore: update dependencies with Updatecli"
-          git fetch
-          git push origin HEAD:${{ github.event.pull_request.head.ref }}
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit."
+          else
+            git commit -m "chore: update dependencies with Updatecli"
+            git fetch
+            git push origin HEAD:${{ github.event.pull_request.head.ref }}
+          fi
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
