fix(baseimage): use a base image that has our ssl version pinned

--- a/manifest.openssl.yaml
+++ b/manifest.openssl.yaml
@@ -1,43 +1,27 @@
-scms:
-  openssl-latest:
-    kind: "github"
-    spec:
-      user: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
-      email: "chutchic@gmail.com"
-      owner: "gh-org-template"
-      repository: "kong-runtime"
-      token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
-      username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
-      branch: "main"
-
 sources:
-  openssl-latest:
-    name: Get latest release
-    kind: githubrelease
+  openssl-version:
+    name: Get current openssl-version release
+    kind: file
     spec:
-      owner: gh-org-template
-      repository: kong-openssl
-      token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
-      username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
-
-conditions:
-  openssl-latest:
-    name: Make sure the image has been published
-    kind: dockerimage
-    sourceid: openssl-latest
-    spec:
-      image: "ghcr.io/gh-org-template/kong-openssl"
+      file: ./kong/.requirements
+      matchpattern: RESTY_OPENSSL_VERSION=.*
+    transformers:
+      - trimprefix: "RESTY_OPENSSL_VERSION="
 
 targets:
-  openssl-latest:
-    name: "Update base image"
-    sourceid: openssl-latest
-    kind: dockerfile
+  openssl-version-env:
+    name: "Update openssl-version env version"
+    sourceid: openssl-version
+    kind: file
     spec:
-      files:
-        - Dockerfile
-      instruction:
-        keyword: "ARG"
-        matcher: "VERSION"
-    conditions:
-      - openssl-latest
+      file: ".env"
+      matchpattern: 'RESTY_OPENSSL_VERSION=.*'
+      replacepattern: 'RESTY_OPENSSL_VERSION={{ source "openssl-version" }}'
+  openssl-version-docker:
+    name: "Update openssl-version Docker version"
+    sourceid: openssl-version
+    kind: file
+    spec:
+      file: "Dockerfile"
+      matchpattern: 'VERSION=.*'
+      replacepattern: 'VERSION={{ source "openssl-version" }}'
