--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.2.1
 KONG_VERSION=3.1.0
 KONG_SHA=964723cb0519f15d2bf887c85324cd5c84b5f2f8
+RESTY_OPENSSL_VERSION=1.1.1s
