--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # All of these values are managed by updatecli. Do not edit manually
 
 OPENRESTY_VERSION=1.21.4.1
-LUAROCKS_VERSION=3.9.1
+LUAROCKS_VERSION=3.9.2
 PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.2.1
-KONG_VERSION=3.1.1
-KONG_SHA=907a4a074a8da826eae7a83d4ce0c6698de07926
-RESTY_OPENSSL_VERSION=1.1.1s
+KONG_VERSION=3.2.0
+KONG_SHA=0b09482b84354344b4c1007ace77ea4d2ce7cd5f
+RESTY_OPENSSL_VERSION=1.1.1t
