--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ OPENRESTY_VERSION=1.21.4.1
 LUAROCKS_VERSION=3.9.2
 PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.2.1
-KONG_VERSION=3.2.1
-KONG_SHA=c33859a83ea402e0b86460f8ea89f3997cc76b28
+KONG_VERSION=3.2.0
+KONG_SHA=0b09482b84354344b4c1007ace77ea4d2ce7cd5f
+RESTY_OPENSSL_VERSION=1.1.1t
