--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ LUAROCKS_VERSION=3.9.2
 PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.2.1
 KONG_VERSION=3.2.0
-KONG_SHA=0b09482b84354344b4c1007ace77ea4d2ce7cd5f
-RESTY_OPENSSL_VERSION=1.1.1t
+KONG_SHA=49308829b8edfabe69156655427810f4baa12be6
+RESTY_OPENSSL_VERSION=1.1.1s
