--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # All of these values are managed by updatecli. Do not edit manually
 
-OPENRESTY_VERSION=1.21.4.1
-LUAROCKS_VERSION=3.9.2
+OPENRESTY_VERSION=1.19.9.1
+LUAROCKS_VERSION=3.8.0
 PCRE_VERSION=8.45
 ATC_ROUTER_VERSION=1.2.1
-KONG_VERSION=3.2.0
-KONG_SHA=49308829b8edfabe69156655427810f4baa12be6
-RESTY_OPENSSL_VERSION=1.1.1s
+KONG_VERSION=2.8.5
+KONG_SHA=a69e46c41e9e9e6096b8ffd6bd24e649c1d461d3
+RESTY_OPENSSL_VERSION=1.1.1o
