--- a/manifest.lua-kong-nginx-module.yaml
+++ b/manifest.lua-kong-nginx-module.yaml
@@ -7,6 +7,11 @@ sources:
       matchpattern: KONG_NGINX_MODULE_BRANCH=.*
     transformers:
       - trimprefix: "KONG_NGINX_MODULE_BRANCH="
+      - replacers:
+          - from: "0.4.0"
+            to: "0.5.0"
+          - from: "0.2.1"
+            to: "0.5.0"
 
 targets:
   lua-kong-nginx-module:
