--- a/.github/workflows/update-cli-prs.yaml
+++ b/.github/workflows/update-cli-prs.yaml
@@ -38,8 +38,8 @@ jobs:
           UPDATECLI_GITHUB_ACTOR: ${{ github.actor }}
         run: |
           for file in manifest*.yaml; do
-            updatecli diff --config "$file"
-            updatecli apply --config "$file"
+            updatecli diff --config "$file" || true
+            updatecli apply --config "$file" || true
           done
           rm -rf updatecli*.tar.gz
 
